hphp/hack/test/typecheck/const_attribute/static/multiple_concrete_defs_from_traits_good.php.exp
WARN: File "multiple_concrete_defs_from_traits_good.php", line 16, characters 7-7:
Duplicated property `p` in `C` (defined in `T1`, `T2` and `T3`): all instances will be aliased at runtime (Warn[12008])
ERROR: File "multiple_concrete_defs_from_traits_good.php", line 17, characters 7-8:
Some members in class `C` are incompatible with those declared in type `T1` (Typing[4341])
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  The property `$p` has the wrong type
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  `T3` and `T1` both declare ambiguous implementations of `$p`.
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  `T3`'s definition is here.
  File "multiple_concrete_defs_from_traits_good.php", line 5, characters 29-31:
  `T1`'s definition is here.
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  Redeclare `$p` in `C` with a compatible signature.
ERROR: File "multiple_concrete_defs_from_traits_good.php", line 17, characters 11-12:
Some members in class `C` are incompatible with those declared in type `T2` (Typing[4341])
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  The property `$p` has the wrong type
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  `T3` and `T2` both declare ambiguous implementations of `$p`.
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  `T3`'s definition is here.
  File "multiple_concrete_defs_from_traits_good.php", line 9, characters 29-31:
  `T2`'s definition is here.
  File "multiple_concrete_defs_from_traits_good.php", line 13, characters 29-31:
  Redeclare `$p` in `C` with a compatible signature.
